[tool.poetry]
name = "splatoon3-nso"
version = "0.1.0"
description = ""
authors = ["cypas <ayano05@outlook.com>"]
readme = "README.md"
packages = [{include = "splatoon3_nso"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
