[tool.poetry]
name = "nonebot-plugin-splatoon3-nso"
version = "0.1.3"
description = "一个基于nonebot2框架的splatoon3游戏nso数据查询插件"
authors = ["cypas <ayano05@outlook.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_splatoon3_nso"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4="^4.12.2"
httpx="^0.24.1"
nonebot2="^2.1.0"
nonebot-adapter-onebot = "^2.1.3"
nonebot-adapter-telegram= "^0.1.0b14"
nonebot-adapter-kaiheila = "^0.2.8"
nonebot-adapter-qq = "^1.3.4"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot_plugin_htmlrender = "^0.2.3"
SQLAlchemy = "^2.0.25"
playwright = "^1.40.0"
Pillow="9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
